--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mocking a postdriver by sending real time GPS locations to some server",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +18,16 @@
   },
   "homepage": "https://github.com/RealTimeStreaming-BachelorProject/GPSDriverMock#readme",
   "dependencies": {
-    "socket.io-client": "^3.1.1"
+    "node-fetch": "^2.6.1",
+    "socket.io-client": "^3.1.1",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.25",
+    "@types/node-fetch": "^2.5.8",
+    "@types/socket.io-client": "^1.4.35",
+    "@types/uuid": "^8.3.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
   }
 }
