--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/RealTimeStreaming-BachelorProject/GPSDriverMock#readme",
   "dependencies": {
     "node-fetch": "^2.6.1",
-    "socket.io-client": "^3.1.1",
+    "socket.io-client": "^2.4.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -27,6 +27,7 @@
     "@types/node-fetch": "^2.5.8",
     "@types/socket.io-client": "^1.4.35",
     "@types/uuid": "^8.3.0",
+    "artillery": "^1.6.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
   }
