--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mocking a postdriver by sending real time GPS locations to some server",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,16 +18,18 @@
   },
   "homepage": "https://github.com/RealTimeStreaming-BachelorProject/GPSDriverMock#readme",
   "dependencies": {
+    "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1",
-    "socket.io-client": "^2.4.0",
-    "uuid": "^8.3.2"
+    "socket.io-client": "^2.4.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.14.25",
     "@types/node-fetch": "^2.5.8",
     "@types/socket.io-client": "^1.4.35",
     "@types/uuid": "^8.3.0",
     "artillery": "^1.6.1",
+    "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
   }
